# FineStructureVulkan

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileShaders.cmake  Platform.cmake
docs/: API_IMPROVEMENTS.md  ARCHITECTURE.md  DESIGN.md  ENGINE_ARCHITECTURE.md  USER_GUIDE.md  USER_GUIDE_LLM.md
examples/: CMakeLists.txt
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/viking_room/: CMakeLists.txt  main.cpp
examples/viking_room/shaders/: model.frag  model.vert
include/finevk/: finevk.hpp
include/finevk/core/: debug.hpp  instance.hpp  logging.hpp  surface.hpp  types.hpp
include/finevk/device/: buffer.hpp  command.hpp  image.hpp  logical_device.hpp  memory.hpp  physical_device.hpp  sampler.hpp
include/finevk/engine/: camera.hpp  deferred_disposer.hpp  finevk_engine.hpp  frame_clock.hpp  game_loop.hpp  render_agent.hpp
include/finevk/high/: format_utils.hpp  material.hpp  mesh.hpp  simple_renderer.hpp  texture.hpp  uniform_buffer.hpp
include/finevk/rendering/: descriptors.hpp  framebuffer.hpp  pipeline.hpp  render_target.hpp  renderpass.hpp  swapchain.hpp  sync.hpp
include/finevk/window/: window.hpp
shaders/: CMakeLists.txt
src/core/: debug.cpp  instance.cpp  logging.cpp  surface.cpp
src/device/: buffer.cpp  command.cpp  image.cpp  logical_device.cpp  memory.cpp  physical_device.cpp  sampler.cpp
src/engine/: camera.cpp  deferred_disposer.cpp  frame_clock.cpp  game_loop.cpp  render_agent.cpp
src/high/: material.cpp  mesh.cpp  simple_renderer.cpp  texture.cpp
src/platform/: glfw_surface.cpp
src/rendering/: descriptors.cpp  framebuffer.cpp  pipeline.cpp  render_target.cpp  renderpass.cpp  swapchain.cpp  sync.cpp
src/window/: window.cpp
tests/: CMakeLists.txt  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp
